@@ -5,8 +5,6 @@ Please go ahead and assign things that are not already assigned to
 anybody else (assignments look like [Stefan]) to yourself - and please
 remove items from this list once they are complete.
 
-* Fix or at least document support for tomcat 5.0 jsp
-
 * AntClassLoader parent loader [Start thread, Peter]
 
 * delete - do not follow symlinks [Peter, may be dropped for 1.6.2]
